--- a/test1/testhtml.html
+++ b/test1/testhtml.html
@@ -203,7 +203,7 @@
 <script src="js/jquery.fileupload-video.js"></script> 
 <!-- The File Upload validation plugin -->
 <script src="js/jquery.fileupload-validate.js"></script>
-<!-- The File Upload Angular JS module -->
+<!-- The File Upload Angular JS module -->  as
 <script src="js/jquery.fileupload-angular.js"></script>
 <!-- The main application script -->
 <script src="js/app.js"></script>
